test/syntaxerrors/TestSingleEqDoWhile.jdc
int i = 10;

do {
    //nothing
} while (i = 10);